# tomato

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/fu/wanke/tomato/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniTracker.cpp  JniTracker.h  effective.cpp  effective.h  matutil.cpp  matutil.h  native-lib.cpp
app/src/main/cpp/alignment/: cfan.cpp
app/src/main/java/fu/wanke/tomato/: LocalAssetManager.java  Logger.java  MainActivity.java  OpenGlUtils.java
app/src/main/java/fu/wanke/tomato/camera/: Camera2Helper.java  CameraEngine.java  DirectDrawer.java  FakeMat.java
app/src/main/java/fu/wanke/tomato/filter/: AbstractFBOFilter.java  BaseFilter.java  BeautifyFilter.java  BigEyeFilter.java  CameraFilter.java  GPUVideoFilter.java  GPUVideoGrayscaleFilter.java  GPUVideoSaturationFilter.java  ScreenFilter.java
app/src/main/java/fu/wanke/tomato/gls/: BoundingBoxView.java  CameraControl.java  GLRender.java  GLRootSurfaceView.java  OpenGlUtils.java
app/src/main/java/fu/wanke/tomato/jni/: FaceTracker.java  Faces.java  Init.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/fu/wanke/tomato/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
